--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@supabase/supabase-js": "^2.38.4",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
