--- a/package.json
+++ b/package.json
@@ -13,17 +13,26 @@
     "type-check": "tsc --noEmit",
     "validate": "pnpm run type-check && pnpm run lint && pnpm run format:check",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "check-env": "node scripts/check-env.js",
+    "test-rls": "node scripts/test-rls.js"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-radio-group": "^1.3.8",
-    "@supabase/supabase-js": "^2.38.4",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.75.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^4.4.7"
@@ -42,6 +51,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "autoprefixer": "^10.4.16",
+    "dotenv": "^17.2.3",
     "eslint": "^8.54.0",
     "eslint-config-next": "14.0.3",
     "eslint-config-prettier": "^10.1.8",
