--- a/package.json
+++ b/package.json
@@ -15,18 +15,21 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "check-env": "node scripts/check-env.js",
-    "test-rls": "node scripts/test-rls.js"
+    "test-rls": "node scripts/test-rls.js",
+    "reset-track-limits": "ts-node scripts/reset-daily-track-limits.ts"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.75.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.0.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "next-themes": "^0.4.6",
