--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.93.3",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
     "react": "^19.2.4",
